--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cannon": "^0.6.2",
     "html-webpack-plugin": "^4.5.0",
     "three": "^0.120.1",
     "webpack": "^4.44.2",
