--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cannon": "^0.6.2",
+    "file-loader": "^6.1.0",
     "html-webpack-plugin": "^4.5.0",
     "three": "^0.120.1",
     "webpack": "^4.44.2",
